# exact_diagonalization

./: .gitignore  Cargo.toml
benches/: bench_allocation.rs  bench_allocation2.rs  bench_bit_iterator.rs  bench_bit_iterator2.rs  bench_bitvec.rs  bench_dot_vs_square.rs  bench_eigh_eigh_inplace.rs  bench_enumerate.rs  bench_pick_bit.rs
examples/: add_quench.rs  add_quench2.rs  large_system.rs  quench_parallel.rs  quench_superposition.rs  quench_superposition_work.rs  quench_superposition_work_precise.rs  quench_w_degeneracy.rs  quench_w_degeneracy2.rs  quench_w_degeneracy_next_nearest.rs  work_computation.rs  work_computation2.rs
examples/nearest_xxz/: Cargo.toml
examples/nearest_xxz/src/: main.rs
examples/nearest_xxz_new/: Cargo.toml
examples/new_format/: Cargo.toml
examples/new_format/src/: main.rs
examples/xxz_parallel/: Cargo.toml
examples/xxz_superposition/: Cargo.toml
examples/xxz_superposition/src/: main.rs
src/: error.rs  lib.rs  prelude.rs
src/bases/: mod.rs  momentum.rs  number.rs
src/hamiltonian/: mod.rs
src/states/: bit_fns.rs  iterator.rs  mod.rs  momentum.rs  number.rs  representation.rs  symmetry.rs
tests/: build_momentum_basis.rs  degeneracy_check.rs  diagonalization.rs  full_hamiltonian.rs  generate_test_diagnoalization.py  hamiltonian_iterator.rs  hamiltonian_lmk.rs  magnetization.rs  quench.rs  quench2.rs  quench3.rs
