[package]
name = "exact_diagonalization"
version = "0.2.0"
authors = ["Myeongseon Choi <key262yek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ndarray = "0.14"
ndarray-linalg = {version = "0.13", features = ["intel-mkl-system"]}
intel-mkl-src = "0.6.0+mkl2020.1"

num-complex = "0.4.0"
num-traits = "0.2.14"
num = "0.4"
bitvec = "0.22"
fnv = "1.0"
dyn-clone = "1.0"
rand = "0.8.3"
genawaiter = "0.99.1"

[dev-dependencies]
criterion = "0.3.4"


[[bench]]
name = "bench_bit_iterator"
harness = false
