[package]
name = "xxz_superposition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exact_diagonalization = {path = "../../../exact_diagonalization"}
ndarray = "0.15.2"
ndarray-linalg = {version = "0.14.1", features = ["openblas-system"]}
blas-src = {version = "0.8", features = ["openblas"] }
openblas-src = {version = "0.10.4", features = ["cblas", "system"]}
num-complex = "0.4.0"
num-traits = "0.2.14"
rand = "0.8.3"
rand_pcg = "0.3"
rand_core = "0.6.0"
rand_distr= "0.3.0"
num = "0.4"
bitvec = "0.22"
fnv = "1.0"
dyn-clone = "1.0"
genawaiter = "0.99.1"
